--- a/cookies.html
+++ b/cookies.html
@@ -1,6 +1,6 @@
-<h1>Cookie Policy for Elemental Studio Cermics</h1>
+<h1>Cookie Policy for Pink Gorilla</h1>
 
-<p>This is the Cookie Policy for Elemental Studio Cermics, accessible from https://www.elementalstudioceramics.co.uk/
+<p>This is the Cookie Policy for Pink Gorilla, accessible from https://www.pink-gorilla.co.uk/
 </p>
 
 <p><strong>What Are Cookies</strong></p>
@@ -81,6 +81,6 @@
   methods:</p>
 
 <ul>
-  <li>Email: susie.cummins@outlook.com</li>
+  <li>Email: info@pink-gorilla.co.uk</li>
 
 </ul>
